<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/check_list"
        android:layout_width="131dp"
        android:layout_height="37dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="156dp"
        android:onClick="CheckReminder"
        android:text="@string/check_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="36dp"
        android:onClick="CheckProfile"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_list" />

    <Button
        android:id="@+id/logout"
        android:layout_width="132dp"
        android:layout_height="35dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="36dp"
        android:onClick="Logout"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <com.google.android.material.chip.Chip
        android:id="@+id/create_reminder"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="120dp"
        android:onClick="CreateReminder"
        android:text="@string/create_reminder"
        android:textColor="?android:attr/colorFocusedHighlight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>