<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:hint="@string/username"
        android:text="@string/username"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="129dp"
        android:hint="@string/register"
        android:onClick="RespondRegister"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:hint="@string/login"
        android:onClick="RespondLogin"
        android:text="@string/login"
        android:textColorLink="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:hint="@string/password"
        android:text="@string/password"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

</androidx.constraintlayout.widget.ConstraintLayout>