<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <EditText
        android:id="@+id/nameP"
        android:layout_width="220dp"
        android:layout_height="41dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/nameP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailP"
        android:layout_width="222dp"
        android:layout_height="47dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emailP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneP" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="28dp"
        android:onClick="RespondModify"
        android:text="modify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailP" />

    <EditText
        android:id="@+id/phoneP"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phoneP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdP" />

    <EditText
        android:id="@+id/pwdP"
        android:layout_width="218dp"
        android:layout_height="42dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pwdP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameP" />

    <FrameLayout
        android:layout_width="206dp"
        android:layout_height="192dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="58dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="124dp"
            android:onClick="Photo"
            app:srcCompat="@drawable/cat"
            tools:srcCompat="@drawable/cat" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>