<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reminderTimeC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="000000" />

        <TextView
            android:id="@+id/createTimeC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="000000" />
    </LinearLayout>

    <EditText
        android:id="@+id/reminderMessageC"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_weight="1"
        android:text="TextView" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_weight="1"
        android:checked="true"
        android:onClick="RespondNotification"
        android:text="notification" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/locationX"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="RespondLocation"
            android:text="@string/locationX" />

        <TextView
            android:id="@+id/locationY"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/locationY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon1" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ChangePhoto"
            app:srcCompat="@drawable/cat1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="RespondDelete"
            android:text="@string/delete" />

        <Button
            android:id="@+id/modifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/create" />
    </LinearLayout>

</LinearLayout>